added circle queue

--- a/DatastructureTests.ipynb
+++ b/DatastructureTests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Queue**"
+    "## **Queue & Deque**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import \"optimized\" library\n",
+    "# import \"optimized\" deque library\n",
     "from collections import deque"
    ]
   },
@@ -43,19 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built-In:\tCollections:\n",
-      "0.87861657\t0.00692964\n",
-      "0.87991881\t0.00497460\n",
-      "0.86804485\t0.00598526\n",
-      "0.85502481\t0.00595737\n",
-      "0.84425831\t0.00504351\n"
+      "Queue:\t\tDeque:\n",
+      "0.84460354\t0.00522089\n",
+      "0.84081936\t0.00598168\n",
+      "0.84051895\t0.00498271\n",
+      "0.84748054\t0.00598216\n",
+      "0.84221673\t0.00598216\n"
      ]
     }
    ],
@@ -72,14 +72,14 @@
     "    return end-start\n",
     "\n",
     "# enqueue tests\n",
-    "print(\"Built-In:\\tCollections:\")\n",
+    "print(\"Queue:\\t\\tDeque:\")\n",
     "for test in range(5):\n",
     "    \n",
-    "    # built-in test\n",
+    "    # queue test\n",
     "    insertTime = timing([])\n",
     "    print(f\"{insertTime:.8f}\", end=\"\")\n",
     "\n",
-    "    # collections test\n",
+    "    # deque test\n",
     "    collectionsStack = deque([])\n",
     "    insertTime = timing(collectionsStack)\n",
     "    print(f\"\\t{insertTime:.8f}\")\n"
@@ -94,19 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built-In:\tCollections:\n",
-      "0.00299120\t0.00299025\n",
-      "0.00299025\t0.00306821\n",
-      "0.00299263\t0.00299001\n",
-      "0.00298786\t0.00398993\n",
-      "0.00304723\t0.00293279\n"
+      "Queue:\t\tDeque:\n",
+      "0.00297260\t0.00300455\n",
+      "0.00198078\t0.00200438\n",
+      "0.00197220\t0.00298309\n",
+      "0.00199342\t0.00199366\n",
+      "0.00298953\t0.00299048\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
     "    end = time()\n",
     "    return end-start\n",
     "\n",
-    "print(\"Built-In:\\tCollections:\")\n",
+    "print(\"Queue:\\t\\tDeque:\")\n",
     "for test in range(5):\n",
     "\n",
     "    # create empty queues\n",
@@ -133,11 +133,11 @@
     "        myQueue.insert(0,random())\n",
     "        collectionsStack.insert(0,random())\n",
     "\n",
-    "    # built-in dequeue\n",
+    "    # queue dequeue\n",
     "    popTime = timing(myQueue)\n",
     "    print(f\"{popTime:.8f}\", end=\"\")\n",
     "\n",
-    "    # collections dequeue\n",
+    "    # deque dequeue\n",
     "    popTime = timing(collectionsStack)\n",
     "    print(f\"\\t{popTime:.8f}\")"
    ]
@@ -151,19 +151,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built-In:\tCollections:\n",
-      "0.00480890\t0.00460029\n",
-      "0.00449705\t0.00398088\n",
-      "0.00498724\t0.00398660\n",
-      "0.00398231\t0.00398636\n",
-      "0.00398660\t0.00498414\n"
+      "Queue:\t\tDeque:\n",
+      "0.00299001\t0.00398564\n",
+      "0.00360703\t0.00353670\n",
+      "0.00322700\t0.00298643\n",
+      "0.00398993\t0.00398684\n",
+      "0.00298977\t0.00298643\n"
      ]
     }
    ],
@@ -180,17 +180,17 @@
     "    return end-start\n",
     "\n",
     "# enqueue tests\n",
-    "print(\"Built-In:\\tCollections:\")\n",
+    "print(\"Queue:\\t\\tDeque:\")\n",
     "for test in range(5):\n",
     "    \n",
-    "    # built-in test\n",
-    "    insertTime = timing([])\n",
-    "    print(f\"{insertTime:.8f}\", end=\"\")\n",
+    "    # queue test\n",
+    "    appendTime = timing([])\n",
+    "    print(f\"{appendTime:.8f}\", end=\"\")\n",
     "\n",
-    "    # collections test\n",
+    "    # deque test\n",
     "    collectionsStack = deque([])\n",
-    "    insertTime = timing(collectionsStack)\n",
-    "    print(f\"\\t{insertTime:.8f}\")"
+    "    appendTime = timing(collectionsStack)\n",
+    "    print(f\"\\t{appendTime:.8f}\")"
    ]
   },
   {
@@ -202,26 +202,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built-In:\tCollections:\n",
-      "0.09251142\t0.00098515\n",
-      "0.09338355\t0.00100160\n",
-      "0.09341526\t0.00098538\n",
-      "0.09238839\t0.00099516\n",
-      "0.09339690\t0.00102282\n"
+      "Queue:\t\tDeque:\n",
+      "9.24177957\t0.00504398\n",
+      "9.05862856\t0.00398874\n",
+      "9.05871177\t0.00304294\n",
+      "9.05977821\t0.00398636\n",
+      "8.90973139\t0.00399017\n"
      ]
     }
    ],
    "source": [
-    "N = 10000\n",
+    "N = 100000\n",
     "\n",
-    "print(\"Built-In:\\tCollections:\")\n",
+    "print(\"Queue:\\t\\tDeque:\")\n",
     "for test in range(5):\n",
     "\n",
     "    # create empty queues\n",
@@ -233,14 +233,14 @@
     "        myQueue.append(random())\n",
     "        collectionsStack.append(random())\n",
     "\n",
-    "    # built-in dequeue\n",
+    "    # queue dequeue\n",
     "    start = time()\n",
     "    for i in range(N):\n",
     "        myQueue.pop(0)\n",
     "    end = time()\n",
     "    print(f\"{end-start:.8f}\", end=\"\")\n",
     "\n",
-    "    # collections dequeue\n",
+    "    # deque dequeue\n",
     "    start = time()\n",
     "    for i in range(N):\n",
     "        collectionsStack.popleft()\n",
@@ -259,50 +259,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add"
+    "Push"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Built-In\tCollections\n",
-      "0.06180191\t0.05635667\n",
-      "0.06149268\t0.05581713\n",
-      "0.06231260\t0.05638838\n",
-      "0.06102228\t0.05252934\n",
-      "0.06055856\t0.05880427\n"
+      "Built-In:\tCollections:\n",
+      "0.04820538\t0.00399017\n",
+      "0.05035138\t0.00399017\n",
+      "0.04962277\t0.00399017\n",
+      "0.04890037\t0.00399017\n",
+      "0.04884481\t0.00399017\n"
      ]
     }
    ],
    "source": [
-    "n = 1000000\n",
+    "N = 1000000\n",
+    "\n",
+    "# append timing function\n",
+    "def timing(stack):\n",
+    "    start = time()\n",
+    "    for i in range(N):\n",
+    "        stack.append(random())\n",
+    "    end = time()\n",
+    "    return end-start\n",
     "\n",
     "print(\"Built-In:\\tCollections:\")\n",
     "\n",
     "for test in range(5):\n",
     "\n",
-    "    # create built-in and library stacks\n",
-    "    myStack = []\n",
-    "    collectionsStack = deque([])\n",
-    "    \n",
-    "    start = time()\n",
-    "    for i in range(n):\n",
-    "        myStack.append(random())\n",
-    "    end = time()\n",
+    "    # time built-in stack\n",
+    "    appendTime = timing([])\n",
+    "    print(f\"{appendTime:.8f}\", end=\"\")\n",
     "\n",
-    "    print(f\"{end-start:.8f}\", end=\"\")\n",
-    "\n",
-    "    start = time()\n",
-    "    for i in range(n):\n",
-    "        collectionsStack.append(random())\n",
-    "    end = time()\n",
-    "\n",
+    "    # time collections stack\n",
+    "    appendTime = timing(collectionsStack)\n",
     "    print(f\"\\t{end-start:.8f}\")"
    ]
   },
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -323,16 +321,24 @@
      "output_type": "stream",
      "text": [
       "Built-In:\tCollections:\n",
-      "0.03552604\t0.03887224\n",
-      "0.03499889\t0.03849387\n",
-      "0.03586769\t0.03853083\n",
-      "0.03687668\t0.03894114\n",
-      "0.03650999\t0.03787661\n"
+      "0.02607679\t0.02691436\n",
+      "0.02555227\t0.02492189\n",
+      "0.02591395\t0.02994132\n",
+      "0.02589822\t0.02690768\n",
+      "0.02587390\t0.02691913\n"
      ]
     }
    ],
    "source": [
-    "n = 1000000\n",
+    "N = 1000000\n",
+    "\n",
+    "# pop timing function\n",
+    "def timing(stack):\n",
+    "    start = time()\n",
+    "    for i in range(N):\n",
+    "        stack.pop()\n",
+    "    end = time()\n",
+    "    return end-start\n",
     "\n",
     "print(\"Built-In:\\tCollections:\")\n",
     "\n",
@@ -341,24 +347,125 @@
     "    myStack = []\n",
     "    collectionsStack = deque([])\n",
     "    \n",
-    "    for i in range(n):\n",
+    "    for i in range(N):\n",
     "        myStack.append(random())\n",
     "        collectionsStack.append(random())\n",
     "\n",
+    "    # time built-in stack\n",
+    "    popTime = timing(myStack)\n",
+    "    print(f\"{popTime:.8f}\", end=\"\")\n",
     "\n",
-    "    start = time()\n",
-    "    for i in range(n):\n",
-    "        myStack.pop()\n",
-    "    end = time()\n",
+    "    # time collections stack\n",
+    "    popTime = timing(collectionsStack)\n",
+    "    print(f\"\\t{popTime:.8f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Circle Queue**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class circleQueue:\n",
+    "    def __init__(self, size):\n",
+    "        self.head = -1\n",
+    "        self.tail = -1\n",
+    "        self.size = size\n",
+    "        self.queue = [None]*size\n",
     "\n",
-    "    print(f\"{end-start:.8f}\", end=\"\")\n",
+    "    def checkFull(self):\n",
+    "        return (self.head == 0 and self.tail == self.size-1) or (self.head == self.tail + 1)\n",
+    "    \n",
+    "    def enqueue(self, item):\n",
+    "        # check if full\n",
+    "        if self.checkFull():\n",
+    "            print(\"Full\")\n",
+    "            return\n",
+    "        \n",
+    "        # check if initial item\n",
+    "        if(self.head == -1):\n",
+    "            self.head = 0\n",
+    "        \n",
+    "        # set new rear index, add item\n",
+    "        self.tail = (self.tail + 1) % self.size\n",
+    "        self.queue[self.tail] = item\n",
     "\n",
-    "    start = time()\n",
-    "    for i in range(n):\n",
-    "        collectionsStack.pop()\n",
-    "    end = time()\n",
+    "    def dequeue(self):\n",
+    "        # check if empty\n",
+    "        if self.head == -1:\n",
+    "            print(\"empty\")\n",
+    "            return\n",
+    "        \n",
+    "        # return last item\n",
+    "        elif (self.head == self.tail):\n",
+    "            item = self.queue[self.head]\n",
+    "            self.head = -1\n",
+    "            self.tail = -1\n",
+    "            return item\n",
+    "        \n",
+    "        # retrieve item, increment head index\n",
+    "        else:\n",
+    "            item = self.queue[self.head]\n",
+    "            self.head = (self.head + 1) % self.size\n",
+    "            return item\n",
     "\n",
-    "    print(f\"\\t{end-start:.8f}\")\n"
+    "    # def printQueue(self):\n",
+    "    #     if self.tail >= self.head:\n",
+    "    #         for i in range(self.head, self.tail+1):\n",
+    "    #             print(self.queue[i])\n",
+    "    #     else:\n",
+    "    #         for i in range(self.head, self.size):\n",
+    "    #             print(self.queue[i])\n",
+    "    #         for i in range(0, self.tail + 1):\n",
+    "    #             print(self.queue[i])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Limited Space Queue Append Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03767180\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100000\n",
+    "SIZE = 1000\n",
+    "\n",
+    "testQueue = circleQueue(SIZE)\n",
+    "\n",
+    "start = time()\n",
+    "for i in range(N):\n",
+    "    # empty half space when full\n",
+    "    if testQueue.checkFull():\n",
+    "        for i in range(int(SIZE/2)):\n",
+    "            testQueue.dequeue()\n",
+    "    # append\n",
+    "    testQueue.enqueue(random())\n",
+    "end = time()\n",
+    "\n",
+    "print(f\"{end-start:.8f}\")    "
    ]
   }
  ],
