removed int cast

--- a/circleQueue.ipynb
+++ b/circleQueue.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.03987837\n",
-      "0.03837872\n",
-      "0.03886652\n",
-      "0.03914285\n",
-      "0.03687286\n"
+      "0.03748751\n",
+      "0.03940105\n",
+      "0.03588009\n",
+      "0.03588367\n",
+      "0.03539085\n"
      ]
     }
    ],
@@ -115,13 +115,13 @@
     "    for i in range(N):\n",
     "        # empty half space when full\n",
     "        if testQueue.checkFull():\n",
-    "            for i in range(int(SIZE/2)):\n",
+    "            for i in range(SIZE//2):\n",
     "                testQueue.dequeue()\n",
     "        # append\n",
     "        testQueue.enqueue(random())\n",
     "    end = time()\n",
     "\n",
-    "    print(f\"{end-start:.8f}\")    "
+    "    print(f\"{end-start:.8f}\")"
    ]
   }
  ],
