reinitialize stacks between tests

--- a/stack.ipynb
+++ b/stack.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +44,11 @@
      "output_type": "stream",
      "text": [
       "Built-In:\tCollections:\n",
-      "0.04820538\t0.00399017\n",
-      "0.05035138\t0.00399017\n",
-      "0.04962277\t0.00399017\n",
-      "0.04890037\t0.00399017\n",
-      "0.04884481\t0.00399017\n"
+      "0.05334830\t0.04086757\n",
+      "0.05049801\t0.04180384\n",
+      "0.05158567\t0.04186201\n",
+      "0.05238771\t0.04192066\n",
+      "0.04829073\t0.04061174\n"
      ]
     }
    ],
@@ -67,13 +67,16 @@
     "\n",
     "for test in range(5):\n",
     "\n",
+    "    myStack = []\n",
+    "    collectionsStack = deque([])\n",
+    "\n",
     "    # time built-in stack\n",
-    "    appendTime = timing([])\n",
+    "    appendTime = timing(myStack)\n",
     "    print(f\"{appendTime:.8f}\", end=\"\")\n",
     "\n",
     "    # time collections stack\n",
     "    appendTime = timing(collectionsStack)\n",
-    "    print(f\"\\t{end-start:.8f}\")"
+    "    print(f\"\\t{appendTime:.8f}\")"
    ]
   },
   {
