--- a/datastructures/heap.ipynb
+++ b/datastructures/heap.ipynb
@@ -41,19 +41,19 @@
    "outputs": [],
    "source": [
     "def heapify(x,i):\n",
-    "    largest = i\n",
+    "    smallest = i\n",
     "    left = 2*i + 1\n",
     "    right = 2*i + 2\n",
     "\n",
-    "    if left < len(x) and x[left] < x[largest]:\n",
-    "        largest = left\n",
+    "    if left < len(x) and x[left] < x[smallest]:\n",
+    "        smallest = left\n",
     "    \n",
-    "    if right < len(x) and x[right] < x[largest]:\n",
-    "        largest = right\n",
+    "    if right < len(x) and x[right] < x[smallest]:\n",
+    "        smallest = right\n",
     "    \n",
-    "    if i != largest:\n",
-    "        x[i],x[largest] = x[largest],x[i]\n",
-    "        heapify(x,largest)\n",
+    "    if i != smallest:\n",
+    "        x[i],x[smallest] = x[smallest],x[i]\n",
+    "        heapify(x,smallest)\n",
     "\n",
     "def createMinHeap(x):\n",
     "    for i in range( (len(x)//2 - 1) , -1, -1):\n",
