--- a/datastructures/BTree.ipynb
+++ b/datastructures/BTree.ipynb
@@ -56,8 +56,6 @@
     "        else:\n",
     "            self.insertNonFull(self.root, data)\n",
     "\n",
-    "\n",
-    "    \n",
     "    def insertNonFull(self,root,data):\n",
     "        # set i to last element\n",
     "        i = len(root.keys) - 1\n",
@@ -81,8 +79,6 @@
     "                    i += 1\n",
     "            self.insertNonFull(root.children[i], data)\n",
     "\n",
-    "\n",
-    "\n",
     "    def splitChildren(self, root, i):\n",
     "        t = self.t\n",
     "        # get root children\n",
@@ -99,10 +95,93 @@
     "        # inherit children\n",
     "        if not y.leaf:\n",
     "            z.children = y.children[t:2*t]\n",
-    "            # TODO CHECK IF t-1 -> t FIXES BUG\n",
     "            y.children = y.children[0:t]\n",
     "\n",
-    "    def printTree(self,root, l=0):\n",
+    "    def delete(self,target,root=None):\n",
+    "        if root:\n",
+    "            # search for node\n",
+    "            t = self.t\n",
+    "            i = 0\n",
+    "            if i < len(root.keys) and target > root.keys[i]:\n",
+    "                i += 1\n",
+    "            # found and root is leaf\n",
+    "            if root.leaf:\n",
+    "                if i < len(root.keys) and target == root.keys[i]:\n",
+    "                    root.keys.pop(i)\n",
+    "                return\n",
+    "            \n",
+    "            # found and root is not leaf\n",
+    "            if i < len(root.keys) and target == root.keys[i]:\n",
+    "                return self.delete_internal_node(root,target,i)\n",
+    "            # search children that can immediate delete\n",
+    "            elif len(root.children[i].keys) >= t:\n",
+    "                self.delete(target, root.children[i])\n",
+    "            # search children that need restructure\n",
+    "            else:\n",
+    "                # child has left & right siblings\n",
+    "                if i != 0 and i + 2 < len(root.child):\n",
+    "                    if len(root.children[i-1].keys) >= t:\n",
+    "                        self.delete_sibling(root,i,i-1)\n",
+    "                    elif len(root.children[i+1].keys) >= t:\n",
+    "                        self.delete_sibling(root,i,i+1)\n",
+    "                    else:\n",
+    "                        self.delete_merge(root,i, i+1)\n",
+    "                # child has only right sibling\n",
+    "                elif i == 0:\n",
+    "                    if len(root.children[i+1].keys) >= t:\n",
+    "                        self.delete_sibling(root,i,i+1)\n",
+    "                    else:\n",
+    "                        self.delete_merge(root,i,i+1)\n",
+    "                # child has only left sibling\n",
+    "                elif i + 1 == len(root.child):\n",
+    "                    if len(root.children[i-1].keys) >= t:\n",
+    "                        self.delete_sibling(root,i,i-1)\n",
+    "                    else:\n",
+    "                        self.delete_merge(root,i,i-1)\n",
+    "\n",
+    "                self.delete(target,root.child[i])\n",
+    "        else:\n",
+    "            self.delete(target,self.root)\n",
+    "    \n",
+    "    def delete_internal_node():\n",
+    "        pass\n",
+    "\n",
+    "    # sibling becomes parent, parent replaces/adds to children\n",
+    "    def delete_sibling(self,root,i,j):\n",
+    "        center_node = root.children[i]\n",
+    "        if i < j:\n",
+    "            right_node = root.children[j]\n",
+    "            # add parent key to child node\n",
+    "            center_node.append(root.keys[i])\n",
+    "            # sibling key becomes parent\n",
+    "            root.keys[i] = right_node.keys[0]\n",
+    "            # siblings left-most child becomes center node's right-most child\n",
+    "            if len(right_node.children) > 0:\n",
+    "                center_node.children.append(right_node.children[0])\n",
+    "                right_node.children.pop(0)\n",
+    "            \n",
+    "            right_node.keys.pop(0)\n",
+    "\n",
+    "        else:\n",
+    "            left_node = root.children[j]\n",
+    "            center_node.insert(0,root.keys[i-1])\n",
+    "            root.keys[i-1] = left_node.keys.pop()\n",
+    "            if len(left_node.children) > 0:\n",
+    "                center_node.children.insert(0, left_node.pop())\n",
+    "\n",
+    "    def delete_merge():\n",
+    "        pass\n",
+    "\n",
+    "    def delete_predecessor(self,root):\n",
+    "        pass\n",
+    "\n",
+    "    def delete_successor(self,root):\n",
+    "        pass\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "    def print_tree(self,root, l=0):\n",
     "        if not root:\n",
     "            return root\n",
     "        print(f\"Depth: {l}\")\n",
@@ -112,7 +191,7 @@
     "        l += 1\n",
     "        if not root.leaf:\n",
     "            for i in root.children:\n",
-    "                self.printTree(i,l)"
+    "                self.print_tree(i,l)"
    ]
   },
   {
@@ -159,7 +238,7 @@
     "\n",
     "    print(f\"t={t}:\\t{end-start:.8f}\")\n",
     "\n",
-    "#bTree.printTree(bTree.root)"
+    "#bTree.print_tree(bTree.root)"
    ]
   }
  ],
