--- a/datastructures/BTree.ipynb
+++ b/datastructures/BTree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
     "    def __init__(self,leaf=False) -> None:\n",
     "        self.keys = []\n",
     "        self.children = []\n",
-    "        self.leaf = leaf\n"
+    "        self.leaf = leaf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
     "            # search for node\n",
     "            t = self.t\n",
     "            i = 0\n",
-    "            if i < len(root.keys) and target > root.keys[i]:\n",
+    "            while i < len(root.keys) and root.keys[i] and target > root.keys[i]:\n",
     "                i += 1\n",
     "            # found and root is leaf\n",
     "            if root.leaf:\n",
@@ -119,7 +119,7 @@
     "            # search children that need restructure\n",
     "            else:\n",
     "                # child has left & right siblings\n",
-    "                if i != 0 and i + 2 < len(root.child):\n",
+    "                if i != 0 and i + 2 < len(root.children):\n",
     "                    if len(root.children[i-1].keys) >= t:\n",
     "                        self.delete_sibling(root,i,i-1)\n",
     "                    elif len(root.children[i+1].keys) >= t:\n",
@@ -133,18 +133,58 @@
     "                    else:\n",
     "                        self.delete_merge(root,i,i+1)\n",
     "                # child has only left sibling\n",
-    "                elif i + 1 == len(root.child):\n",
+    "                elif i + 1 == len(root.children):\n",
     "                    if len(root.children[i-1].keys) >= t:\n",
     "                        self.delete_sibling(root,i,i-1)\n",
     "                    else:\n",
     "                        self.delete_merge(root,i,i-1)\n",
+    "                        i -= 1\n",
     "\n",
-    "                self.delete(target,root.child[i])\n",
+    "                self.delete(target,root.children[i])\n",
     "        else:\n",
     "            self.delete(target,self.root)\n",
     "    \n",
-    "    def delete_internal_node():\n",
-    "        pass\n",
+    "    def delete_internal_node(self,root,target,i):\n",
+    "        t = self.t\n",
+    "        if root.leaf:\n",
+    "            if target == root.keys[i]:\n",
+    "                root.keys.pop(i)\n",
+    "                return\n",
+    "            return\n",
+    "        \n",
+    "        if len(root.children[i].keys) >= t:\n",
+    "            root.keys[i] = self.delete_predecessor(root.children[i])\n",
+    "            return\n",
+    "\n",
+    "        elif len(root.children[i+1].keys) >= t:\n",
+    "            root.keys[i] = self.delete_successor(root.children[i+1])\n",
+    "            return\n",
+    "\n",
+    "        else:\n",
+    "            self.delete_merge(root, i, i+1)\n",
+    "            # value is now middle key of child node\n",
+    "            self.delete_internal_node(root.children[i], target, t-1)\n",
+    "\n",
+    "    def delete_predecessor(self,root):\n",
+    "        if root.leaf:\n",
+    "            return root.keys.pop()\n",
+    "        n = len(root.keys) - 1\n",
+    "        if len(root.children[n].keys) >= self.t:\n",
+    "            self.delete_sibling(root, n+1, n)\n",
+    "        else:\n",
+    "            self.delete_merge(root,n,n+1)\n",
+    "        self.delete_predecessor(root.children[n])\n",
+    "\n",
+    "\n",
+    "    def delete_successor(self,root):\n",
+    "        if root.leaf:\n",
+    "            return root.keys.pop(0)\n",
+    "        if len(root.children[1].keys) >= self.t:\n",
+    "            self.delete_sibling(root,0,1)\n",
+    "        else:\n",
+    "            self.delete_merge(root,0,1)\n",
+    "        self.delete_successor(root.children[0])\n",
+    "\n",
     "\n",
     "    # sibling becomes parent, parent replaces/adds to children\n",
     "    def delete_sibling(self,root,i,j):\n",
@@ -152,7 +192,7 @@
     "        if i < j:\n",
     "            right_node = root.children[j]\n",
     "            # add parent key to child node\n",
-    "            center_node.append(root.keys[i])\n",
+    "            center_node.keys.append(root.keys[i])\n",
     "            # sibling key becomes parent\n",
     "            root.keys[i] = right_node.keys[0]\n",
     "            # siblings left-most child becomes center node's right-most child\n",
@@ -164,22 +204,35 @@
     "\n",
     "        else:\n",
     "            left_node = root.children[j]\n",
-    "            center_node.insert(0,root.keys[i-1])\n",
+    "            center_node.keys.insert(0,root.keys[i-1])\n",
     "            root.keys[i-1] = left_node.keys.pop()\n",
     "            if len(left_node.children) > 0:\n",
-    "                center_node.children.insert(0, left_node.pop())\n",
+    "                center_node.children.insert(0, left_node.children.pop())\n",
     "\n",
-    "    def delete_merge():\n",
-    "        pass\n",
-    "\n",
-    "    def delete_predecessor(self,root):\n",
-    "        pass\n",
-    "\n",
-    "    def delete_successor(self,root):\n",
-    "        pass\n",
+    "    # parent key merges with sibling node, adds to child node\n",
+    "    def delete_merge(self,root,i,j):\n",
+    "        new_node = None\n",
+    "        center_node = root.children[i]\n",
+    "        if i<j:\n",
+    "            right_node = root.children[j]\n",
+    "            center_node.keys.append(root.keys.pop(i))\n",
+    "            center_node.keys.extend(right_node.keys)\n",
+    "            if not right_node.leaf:\n",
+    "                center_node.children.extend(right_node.children)\n",
+    "            root.children.pop(j)\n",
+    "            new_node = center_node\n",
+    "        else:\n",
+    "            left_node = root.children[j]\n",
+    "            left_node.keys.append(root.keys.pop(j))\n",
+    "            left_node.keys.extend(center_node.keys)\n",
+    "            if not center_node.leaf:\n",
+    "                left_node.children.extend(center_node.children)\n",
+    "            root.children.pop(i)\n",
+    "            new_node = left_node\n",
     "        \n",
-    "\n",
-    "\n",
+    "        if self.root == root and len(root.keys) == 0:\n",
+    "            self.root = new_node\n",
+    "        \n",
     "\n",
     "    def print_tree(self,root, l=0):\n",
     "        if not root:\n",
@@ -203,22 +256,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t=2:\t0.40279508\n",
-      "t=3:\t0.26967740\n",
-      "t=4:\t0.25221086\n",
-      "t=5:\t0.19325376\n",
-      "t=6:\t0.20049167\n",
-      "t=7:\t0.18239069\n",
-      "t=8:\t0.19807553\n",
-      "t=9:\t0.18126464\n",
-      "t=10:\t0.18223786\n"
+      "t=2:\t0.64328074\n",
+      "t=3:\t0.35655332\n",
+      "t=4:\t0.32212639\n",
+      "t=5:\t0.19744754\n",
+      "t=6:\t0.28481913\n",
+      "t=7:\t0.18640757\n",
+      "t=8:\t0.28267097\n",
+      "t=9:\t0.17297149\n",
+      "t=10:\t0.18553948\n"
      ]
     }
    ],
@@ -239,6 +292,57 @@
     "    print(f\"t={t}:\\t{end-start:.8f}\")\n",
     "\n",
     "#bTree.print_tree(bTree.root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deletion Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t=2:\t0.17523980\n",
+      "t=3:\t0.13423848\n",
+      "t=4:\t0.10315704\n",
+      "t=5:\t0.09025741\n",
+      "t=6:\t0.08943605\n",
+      "t=7:\t0.08395100\n",
+      "t=8:\t0.07774186\n",
+      "t=9:\t0.07924914\n",
+      "t=10:\t0.08225703\n",
+      "t=10:\t0.08225703\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100000\n",
+    "nums = [randint(0,1000) for x in range(N)]\n",
+    "\n",
+    "for test in range(9):\n",
+    "\n",
+    "    t = 2 + test\n",
+    "\n",
+    "    bTree = BTree(t) \n",
+    "    for i in nums:\n",
+    "        bTree.insert(i)\n",
+    "\n",
+    "    start = time()\n",
+    "    for i in nums:\n",
+    "        bTree.delete(i,bTree.root)\n",
+    "    end = time()\n",
+    "\n",
+    "    print(f\"t={t}:\\t{end-start:.8f}\")\n",
+    "\n",
+    "print(f\"t={t}:\\t{end-start:.8f}\")"
    ]
   }
  ],
