redblack delete tests

--- a/datastructures/RedBlackTree.ipynb
+++ b/datastructures/RedBlackTree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +107,8 @@
     "                    if node == parent.left:\n",
     "                        node = node.parent\n",
     "                        self.rightRotate(node)\n",
-    "                    node.parent.color = False\n",
-    "                    node.parent.parent.color = True\n",
+    "                    node.parent.red = False\n",
+    "                    node.parent.parent.red = True\n",
     "                    self.leftRotate(node.parent.parent)\n",
     "\n",
     "            if node == self.root or node.parent == self.root:\n",
@@ -218,6 +218,130 @@
     "        node.left = Node(None,False)\n",
     "        node.right = Node(None,False)\n",
     "        return node\n",
+    "    \n",
+    "\n",
+    "    def delete(self,target):\n",
+    "        root = self.root\n",
+    "        # empty tree\n",
+    "        if root.data is None:\n",
+    "            return\n",
+    "        \n",
+    "        # search for target\n",
+    "        delete_node = None\n",
+    "        while root.data is not None:\n",
+    "            if target == root.data:\n",
+    "                delete_node = root\n",
+    "                break\n",
+    "            elif target < root.data:\n",
+    "                root = root.left\n",
+    "            else:\n",
+    "                root = root.right\n",
+    "        \n",
+    "        # not found\n",
+    "        if not delete_node:\n",
+    "            return\n",
+    "        \n",
+    "        original_color = delete_node.red\n",
+    "        # x replaces deleted node\n",
+    "        x = None\n",
+    "\n",
+    "        # only has right child\n",
+    "        if delete_node.left.data is None:\n",
+    "            x = delete_node.right\n",
+    "            self.transplant(delete_node,x)\n",
+    "        # only has left child\n",
+    "        elif delete_node.right.data is None:\n",
+    "            x = delete_node.left\n",
+    "            self.transplant(delete_node,x)\n",
+    "        # has both children\n",
+    "        else:\n",
+    "            # get minimum value of left subtree\n",
+    "            min_node = delete_node.right\n",
+    "            while min_node.left.data is not None:\n",
+    "                min_node = min_node.left\n",
+    "\n",
+    "            original_color = min_node.red\n",
+    "            x = min_node.right\n",
+    "            if min_node.parent == delete_node:\n",
+    "                x.parent = min_node\n",
+    "            else:\n",
+    "                self.transplant(min_node,x)\n",
+    "                min_node.right = delete_node.right\n",
+    "                min_node.right.parent = min_node\n",
+    "\n",
+    "            self.transplant(delete_node,min_node)\n",
+    "            min_node.left = delete_node.left\n",
+    "            min_node.left.parent = min_node\n",
+    "            min_node.red = delete_node.red\n",
+    "        \n",
+    "        # if black node deleted\n",
+    "        if not original_color:\n",
+    "            self.delete_fixup(x)\n",
+    "\n",
+    "    def transplant(self,x,y):\n",
+    "        if x.parent is None:\n",
+    "            self.root = y\n",
+    "        elif x.parent.left == x:\n",
+    "            x.parent.left = y\n",
+    "        else:\n",
+    "            x.parent.right = y\n",
+    "        y.parent = x.parent \n",
+    "        \n",
+    "\n",
+    "    def delete_fixup(self,x):\n",
+    "        while x != self.root and not x.red:\n",
+    "            if x == x.parent.left:\n",
+    "                sibling = x.parent.right\n",
+    "                # case 1: red sibling\n",
+    "                if sibling.red:\n",
+    "                    sibling.red = False\n",
+    "                    x.parent.red = True\n",
+    "                    self.leftRotate(x.parent)\n",
+    "                    sibling = x.parent.right\n",
+    "\n",
+    "                # case 2: both sibling children are black\n",
+    "                if not sibling.left.red and not sibling.right.red:\n",
+    "                    sibling.red = True\n",
+    "                    x = x.parent\n",
+    "                else:\n",
+    "                    # case 3: right sibling black\n",
+    "                    if not sibling.right.red:\n",
+    "                        sibling.left.red = False\n",
+    "                        sibling.red = True\n",
+    "                        self.rightRotate(sibling)\n",
+    "                        sibling = x.parent.right\n",
+    "                    \n",
+    "                    # case 4: right sibling red\n",
+    "                    sibling.red = x.parent.red\n",
+    "                    x.parent.red = False\n",
+    "                    sibling.right.red = False\n",
+    "                    self.leftRotate(x.parent)\n",
+    "                    x = self.root\n",
+    "            else:\n",
+    "                sibling = x.parent.left\n",
+    "                if sibling.red:\n",
+    "                    sibling.red = False\n",
+    "                    x.parent.red = True\n",
+    "                    self.rightRotate(x.parent)\n",
+    "                    sibling = x.parent.left\n",
+    "                \n",
+    "                if not sibling.right.red and not sibling.left.red:\n",
+    "                    sibling.red = True\n",
+    "                    x = x.parent\n",
+    "                else:\n",
+    "                    if not sibling.left.red:\n",
+    "                        sibling.right.red = False\n",
+    "                        sibling.red = True\n",
+    "                        self.leftRotate(sibling)\n",
+    "                        sibling = x.parent.left\n",
+    "                    \n",
+    "                    sibling.red = x.parent.red\n",
+    "                    x.parent.red = False\n",
+    "                    sibling.left.red = False\n",
+    "                    self.rightRotate(x.parent)\n",
+    "                    x = self.root\n",
+    "\n",
+    "        self.root.red = False\n",
     "\n",
     "    def inOrder(self, root):\n",
     "        if not root or not root.data:\n",
@@ -238,18 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08821702\n",
-      "0.02989483\n",
-      "0.03241324\n",
-      "0.03488493\n",
-      "0.07029843\n"
+      "0.13085651\n",
+      "0.13057709\n",
+      "0.12880135\n",
+      "0.12975478\n",
+      "0.22237992\n"
      ]
     }
    ],
@@ -269,6 +393,53 @@
     "    print(f\"{end-start:.8f}\")\n",
     "\n",
     "# rb_tree.inOrder(rb_tree.root)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deletion Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.59580994\n",
+      "0.59859228\n",
+      "0.60129738\n",
+      "0.59576893\n",
+      "0.59516621\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100000\n",
+    "\n",
+    "nums = [x for x in range(N)]\n",
+    "\n",
+    "\n",
+    "for test in range(5):\n",
+    "\n",
+    "    rb_tree = RedBlackTree()\n",
+    "\n",
+    "    \n",
+    "    for i in range(1,N):\n",
+    "        rb_tree.insert(i)\n",
+    "    \n",
+    "\n",
+    "    start = time()\n",
+    "    for i in range(1,N):\n",
+    "        rb_tree.delete(i)\n",
+    "    end = time()\n",
+    "\n",
+    "    print(f\"{end-start:.8f}\")"
    ]
   }
  ],
